remove the size limit for downloading Pop3 message; bug 16338; r=bienvenu